Bai tap zzing_mp3

--- a/ss8/index.html
+++ b/ss8/index.html
@@ -1,39 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bài tập số 8</title>  <!--THẻ tiêu đề -->
+    <title>Bài tập số 8</title>
+    <!--THẻ tiêu đề -->
+    <link rel="stylesheet" href="fontawesome/css/all.css">
 </head>
+
 <body>
     <style>
-        .list_item, .list_item1{
+        .list_item,
+        .list_item1 {
             display: flex;
         }
-        .list_item1{
+
+        .list_item1 {
             display: flex;
             margin-top: 30px;
         }
-        .item{
+
+        .item {
             margin-right: 15px;
         }
-        a{
-        text-decoration: none;
-        color: white;
+
+        a {
+            text-decoration: none;
+            color: white;
         }
+
         #wrapper {
             color: white;
             background: black;
             width: fit-content;
         }
-        h1{
+
+        h1 {
             font-size: 28px;
+        }
+
+        .icon {
+            display: flex;
+
+        }
+
+        .icon1 {
+            display: flex;
+
+        }
+
+        .icon i {
+            color: white;
+            margin-top: 28px;
+            margin-left: 559px;
+        }
+
+        .icon1 i {
+            color: white;
+            margin-top: 28px;
+            margin-left: 649px;
         }
     </style>
     <div id="wrapper">
         <div id="content">
-            <h1>Nhạc Hay Nghe Hay</h1>
+
+            <div class="icon">
+                <h1>Nhạc Hay Nghe Hay</h1>
+                <i class="fas fa-chevron-right"></i>
+            </div>
             <div class="list_item">
                 <div class="item">
                     <div class="pictrue"><a href=""><img src="img/1.png" alt=""></a></div>
@@ -42,19 +78,25 @@
                 <div class="item">
                     <div class="pictrue"><a href=""><img src="img/2.png" alt=""></a></div>
                     <a href="">Cặp bài sơn tùng</a>
-                </div><div class="item">
+                </div>
+                <div class="item">
                     <div class="pictrue"><a href=""><img src="img/3.png" alt=""></a></div>
                     <a href="">Every EDM</a>
-                </div><div class="item">
+                </div>
+                <div class="item">
                     <div class="pictrue"><a href=""><img src="img/4.png" alt=""></a></div>
                     <a href="">#hashtag V-POP</a>
-                </div><div class="item">
+                </div>
+                <div class="item">
                     <div class="pictrue"><a href=""><img src="img/5.png" alt=""></a></div>
                     <a href="">Nhạc Trẻ Gây Nghiện</a>
                 </div>
-                
+
             </div>
-            <h1>Nhạc Của tôi</h1>
+            <div class="icon1">
+                <h1>Nhạc Của tôi</h1>
+                <i class="fas fa-chevron-right"></i>
+            </div>
             <div class="list_item1">
                 <div class="item">
                     <div class="pictrue"><a href=""><img src="img/5.png" alt=""></a></div>
@@ -63,19 +105,24 @@
                 <div class="item">
                     <div class="pictrue"><a href=""><img src="img/4.png" alt=""></a></div>
                     <a href="">Cặp bài sơn tùng</a>
-                </div><div class="item">
+                </div>
+                <div class="item">
                     <div class="pictrue"><a href=""><img src="img/2.png" alt=""></a></div>
                     <a href="">Every EDM</a>
-                </div><div class="item">
+                </div>
+                <div class="item">
                     <div class="pictrue"><a href=""><img src="img/3.png" alt=""></a></div>
                     <a href="">#hashtag V-POP</a>
-                </div><div class="item">
+                </div>
+                <div class="item">
                     <div class="pictrue"><a href=""><img src="img/1.png" alt=""></a></div>
                     <a href="">Nhạc Trẻ Gây Nghiện</a>
                 </div>
-                
+
             </div>
+
         </div>
     </div>
 </body>
+
 </html>
