--- a/ex8/index.html
+++ b/ex8/index.html
@@ -410,44 +410,95 @@
                     </div>
                 </div>
             </div>
-            <!-- <div id="web_Chuan">
+
+            <div id="web_Chuan">
+
                 <div class="Hoc_web_Chuan">
                     <p>Học Web Chuấn</p>
                 </div>
                 <div class="content">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, voluptas libero. Nisi omnis quidem nostrum labore voluptatibus exercitationem doloremque eum!</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos libero minus esse sapiente atque aperiam doloremque nulla, eligendi quia asperiores inventore recusandae ea animi optio, provident molestiae distinctio maiores quibusdam tempora laboriosam culpa dolores doloribus corporis repellat! Velit, culpa dolor.</p>
-                    <ul>
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, voluptas libero. Nisi omnis
+                        quidem nostrum labore voluptatibus exercitationem doloremque eum!</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos libero minus esse sapiente
+                        atque aperiam doloremque nulla, eligendi quia asperiores inventore recusandae ea animi optio,
+                        provident molestiae distinctio maiores quibusdam tempora laboriosam culpa dolores doloribus
+                        corporis repellat! Velit, culpa dolor.</p>
+                    <ul class="father">
                         <li>
-                            <ul>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
+                            <ul class="child">
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
                             </ul>
                         </li>
                         <li>
                             <ul>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
                             </ul>
                         </li>
                         <li>
                             <ul>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
-                                <li>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
+                                <li><i class="fas fa-check"></i>Lorem, ipsum dolor.</li>
                             </ul>
                         </li>
                     </ul>
+                    <button>Learn More About Us</button>
                 </div>
-            </div> -->
+
+            </div>
+            <div id="list">
+                <div class="list_item">
+                <ul>
+                    <li>
+                        <div class="icon_H">
+                            <p>H</p>
+                        </div>
+                        <div class="text">
+                            <h3>Lorem, ipsum dolor.</h3>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon_H">
+                            <p>H</p>
+                        </div>
+                        <div class="text">
+                            <h3>Lorem, ipsum dolor.</h3>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon_H">
+                            <p>H</p>
+                        </div>
+                        <div class="text">
+                            <h3>Lorem, ipsum dolor.</h3>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                        </div>
+                    </li>
+                    <li class="last_item">
+                        <div class="icon_H">
+                            <p>H</p>
+                        </div>
+                        <div class="text">
+                            <h3>Lorem, ipsum dolor.</h3>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            </div>
+            
         </div>
 
     </div>
