--- a/ex8/index.html
+++ b/ex8/index.html
@@ -458,52 +458,353 @@
             </div>
             <div id="list">
                 <div class="list_item">
+                    <ul>
+                        <li>
+                            <div class="icon_H">
+                                <p>H</p>
+                            </div>
+                            <div class="text">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icon_H">
+                                <p>H</p>
+                            </div>
+                            <div class="text">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icon_H">
+                                <p>H</p>
+                            </div>
+                            <div class="text">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                            </div>
+                        </li>
+                        <li class="last_item">
+                            <div class="icon_H">
+                                <p>H</p>
+                            </div>
+                            <div class="text">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="contact_form">
+                <h2>Get in touch with us by filling contact form below</h2>
+                <div class="inline_form">
+                    <input type="text" placeholder="*Enter your full name ">
+                    <input type="email" placeholder="*Enter your email address">
+                </div>
+                <br>
+                <div class="block">
+                    <input type="text" placeholder="Enter your subject">
+                </div>
+
+                <textarea name="" placeholder="*Your message here...." id="" cols="30" rows="10"></textarea>
+                <br><button>Send message</button> *Please fill all required form field, thanks!
+            </div>
+
+            <div id="form_login">
+                <h2>Login</h2>
+                <div class="inline_form">
+                    <input type="text" placeholder="First name">
+                    <input type="text" placeholder="Last Name">
+                </div>
+                <div class="inline_form">
+                    <input type="email" placeholder="Your Email">
+                    <input type="text" placeholder="Your Phone">
+                </div>
+                <div class="inline_form">
+                    <select name="" id="country">
+                        <option value="0">Select Country</option>
+                        <option value="1">VietNam</option>
+                        <option value="2">Indonenxia</option>
+                        <option value="3">China</option>
+                        <option value="4">Japan</option>
+                    </select>
+                    <select name="" id="course">
+                        <option value="0">Select Course</option>
+                        <option value="1">123</option>
+                        <option value="2">456</option>
+                        <option value="3">789</option>
+                        <option value="4">1212</option>
+                    </select>
+                </div>
+                <div class="block">
+                    <input type="text" placeholder="Content">
+                </div>
+                <button>
+                    <p>Submit</p>
+                </button>
+            </div>
+            <div id="form_blog">
+                <div class="text_header">
+                    <h2>Form Blog</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tempore. Veniam laboriosam
+                        voluptas ex reprehenderit?</p>
+                </div>
                 <ul>
                     <li>
-                        <div class="icon_H">
-                            <p>H</p>
+                        <img src="img/ping_hocWebChuan.png" alt="">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <div class="address">
+                            <div class="author">
+                                by admin 02 June 2016 <i class="fas fa-comments"></i> 87
+                            </div>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatem minus
+                                    libero pariatur voluptatibus, nihil cupiditate deleniti impedit dignissimos?
+                                    Veritatis exercitationem nemo architecto laboriosam sed fugiat soluta suscipit
+                                    voluptatem aperiam!</p>
+                            </div>
                         </div>
-                        <div class="text">
-                            <h3>Lorem, ipsum dolor.</h3>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                        <div class="btn">
+                            <p>Read more</p>
                         </div>
                     </li>
                     <li>
-                        <div class="icon_H">
-                            <p>H</p>
+                        <img src="img/ping_hocWebChuan.png" alt="">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <div class="address">
+                            <div class="author">
+                                by admin 02 June 2016 <i class="fas fa-comments"></i> 87
+                            </div>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatem minus
+                                    libero pariatur voluptatibus, nihil cupiditate deleniti impedit dignissimos?
+                                    Veritatis exercitationem nemo architecto laboriosam sed fugiat soluta suscipit
+                                    voluptatem aperiam!</p>
+                            </div>
                         </div>
-                        <div class="text">
-                            <h3>Lorem, ipsum dolor.</h3>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                        <div class="btn">
+                            <p>Read more</p>
                         </div>
                     </li>
                     <li>
-                        <div class="icon_H">
-                            <p>H</p>
+                        <img src="img/ping_hocWebChuan.png" alt="">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <div class="address">
+                            <div class="author">
+                                by admin 02 June 2016 <i class="fas fa-comments"></i> 87
+                            </div>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatem minus
+                                    libero pariatur voluptatibus, nihil cupiditate deleniti impedit dignissimos?
+                                    Veritatis exercitationem nemo architecto laboriosam sed fugiat soluta suscipit
+                                    voluptatem aperiam!</p>
+                            </div>
                         </div>
-                        <div class="text">
-                            <h3>Lorem, ipsum dolor.</h3>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                        <div class="btn">
+                            <p>Read more</p>
                         </div>
                     </li>
-                    <li class="last_item">
-                        <div class="icon_H">
-                            <p>H</p>
+                    <li>
+                        <img src="img/ping_hocWebChuan.png" alt="">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <div class="address">
+                            <div class="author">
+                                by admin 02 June 2016 <i class="fas fa-comments"></i> 87
+                            </div>
+                            <div class="text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatem minus
+                                    libero pariatur voluptatibus, nihil cupiditate deleniti impedit dignissimos?
+                                    Veritatis exercitationem nemo architecto laboriosam sed fugiat soluta suscipit
+                                    voluptatem aperiam!</p>
+                            </div>
                         </div>
-                        <div class="text">
-                            <h3>Lorem, ipsum dolor.</h3>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, distinctio!
+                        <div class="btn">
+                            <p>Read more</p>
                         </div>
                     </li>
                 </ul>
             </div>
+            <div id="our_Service">
+                <div class="text_header">
+                    <h2>Our Service</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sunt recusandae soluta aperiam
+                        inventore at reiciendis officia omnis alias sapiente ipsa sequi nemo quibusdam, excepturi amet
+                        modi ut blanditiis placeat officiis nulla dolores ducimus aut et. Excepturi obcaecati nostrum
+                        delectus! ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tempore. Veniam laboriosam
+                        voluptas ex reprehenderit?</p>
+                </div>
+                <ul>
+                    <li class="item">
+                        <p class="gb_green">Học web chuẩn</p>
+                        <div class="box">
+                            <h3>Lorem ipsum dolor sit amet.</h3>
+                            <div class="address">
+                                <div class="author">
+                                    by admin 02 June 2016 <i class="fas fa-comments"></i> 87
+                                </div>
+                                <div class="text">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatem minus
+                                        libero pariatur voluptatibus, nihil cupiditate deleniti impedit dignissimos?
+                                        Veritatis exercitationem nemo architecto laboriosam sed fugiat soluta suscipit
+                                        voluptatem aperiam!</p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </li>
+                    <li class="item">
+                        <p class="gb_green">Học web chuẩn</p>
+
+                        <div class="box">
+                            <h3>Lorem ipsum dolor sit amet.</h3>
+                            <div class="address">
+                                <div class="author">
+                                    by admin 02 June 2016 <i class="fas fa-comments"></i> 87
+                                </div>
+                                <div class="text">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatem minus
+                                        libero pariatur voluptatibus, nihil cupiditate deleniti impedit dignissimos?
+                                        Veritatis exercitationem nemo architecto laboriosam sed fugiat soluta suscipit
+                                        voluptatem aperiam!</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </li>
+                    <li class="last_item">
+                        <p class="gb_green">Học web chuẩn</p>
+                        <div class="box">
+                            <h3>Lorem ipsum dolor sit amet.</h3>
+                            <div class="address">
+                                <div class="author">
+                                    by admin 02 June 2016 <i class="fas fa-comments"></i> 87
+                                </div>
+                                <div class="text">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatem minus
+                                        libero pariatur voluptatibus, nihil cupiditate deleniti impedit dignissimos?
+                                        Veritatis exercitationem nemo architecto laboriosam sed fugiat soluta suscipit
+                                        voluptatem aperiam!</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </li>
+
+                </ul>
             </div>
-            
+
+            <div id="choose_us">
+                <div class="bg_black">
+                    <p>Học web chuẩn</p>
+                </div>
+
+                <div class="box">
+                    <div class="text">
+                        <h3>About Us</h3>
+                        <div class="underlined">
+
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus natus nisi voluptatibus fugiat,
+                        libero, fugit cum fuga similique impedit non maiores sunt dolorem assumenda exercitationem
+                        corporis dicta adipisci dolorum voluptates nemo ullam sed? Et, repudiandae quaerat! Ducimus
+                        debitis blanditiis, possimus voluptates voluptas eum ipsam nisi quam maxime quae officia
+                        aliquid?</p>
+                    <h4>Why Choose Us</h4>
+                    <ul class="father">
+                        <li>
+                            <ul class="child">
+                                <li>
+                                    <i class="fas fa-check"></i> Lorem, ipsum dolor.
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> Lorem, ipsum dolor.
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> Lorem, ipsum dolor.
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> Lorem, ipsum dolor.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="child">
+                                <li>
+                                    <i class="fas fa-check"></i> Lorem, ipsum dolor.
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> Lorem, ipsum dolor.
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> Lorem, ipsum dolor.
+                                </li>
+                                <li>
+                                    <i class="fas fa-check"></i> Lorem, ipsum dolor.
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
     </div>
     <div id="footer">
+        <!-- 1 -->
+        <div class="footer_1">
+            <div class="content">
+                <div class="box">
+                    <p>190x50</p>
+                </div>
+                <div class="text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ducimus, corrupti alias, tempora
+                    deleniti nobis porro praesentium modi odio dignissimos obcaecati, minus dolor cumque repudiandae at
+                    explicabo? Accusantium, quia? Enim nisi alias voluptate dolores ad earum nihil molestias illo, quae
+                    iure assumenda magnam cum harum aliquid ratione, voluptatibus repudiandae, tempore consequuntur
+                    maxime hic? Vel ab tempora, dignissimos doloribus maxime fuga?
+                </div>
 
+            </div>
+            <div class="information_Link">
+                <h3>Information Link</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Prcing</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href=""> Faq</a></li>
+                    <li><a href=""> Contact</a></li>
+                </ul>
+            </div>
+            <div class="Contact_Details">
+             <h3>Contact Details</h3>
+                <ul>
+                    <li><a href="">Abc@gmail.com</a></li>
+                    <li><a href="">Abc@gmail.com</a></li>
+                    <li><a href="">Abc@gmail.com</a></li>
+                    <li><a href="">Abc@gmail.com</a></li>
+                    <li><a href=""> Abc@gmail.com</a></li>
+                    <li><a href=""> Abc@gmail.com</a></li>
+                </ul>
+            </div>
+            <div class="information_Link">
+               <h3>Social</h3>
+                    <ul>
+                        <li><a href="https://www.facebook.com/bebu2112"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.google.com.vn/?hl=vi"> <i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="https://twitter.com/?lang=vi"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://www.facebook.com/bebu2112"><i class="fab fa-facebook-f"></i></a></li>
+                    </ul>
+              
+            </div>
+        </div>
+    </div>
     </div>
     </div>
 </body>
