--- a/ex8/index.html
+++ b/ex8/index.html
@@ -756,7 +756,7 @@
     </div>
     <div id="footer">
         <!-- 1 -->
-        <div class="footer_1">
+        <div id="footer_1">
             <div class="content">
                 <div class="box">
                     <p>190x50</p>
@@ -781,7 +781,7 @@
                     <li><a href=""> Contact</a></li>
                 </ul>
             </div>
-            <div class="Contact_Details">
+            <div class="information_Link">
              <h3>Contact Details</h3>
                 <ul>
                     <li><a href="">Abc@gmail.com</a></li>
