--- a/java/index.html
+++ b/java/index.html
@@ -18,5 +18,6 @@
     <i class="far fa-file"></i>
     <i class="fas fa-plus"></i>
     <i class="fas fa-save"></i>
+    <i class="fas fa-sort"></i>
 </body>
 </html>
