--- a/ex11/indent.html
+++ b/ex11/indent.html
@@ -6,19 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="fontawesome/css/all.css">
 </head>
- 
+
 <body>
     <div class="box" style="background: red; padding: 20px;">
         <h1 style="color: white; text-align: center; margin: 0px ;">My To Do List</h1>
-        <input type="text" style="padding: 10px 700px 10px 10px;  margin-left: 493px; " name="todo-content" placeholder="Enter content/......" id="todo-content">
+        <input type="text" style="padding: 10px 700px 10px 10px;  margin-left: 493px; " name="todo-content"
+            placeholder="Enter content/......" id="todo-content">
         <button id="add-btn" style="padding: 6px 30px; font-size: 20px;">Add</button>
     </div>
     <ul id="todo-list">
 
     </ul>
-
-
     <script src="js/app.js"></script>
 </body>
 
