--- a/java/index.html
+++ b/java/index.html
@@ -19,5 +19,6 @@
     <i class="fas fa-plus"></i>
     <i class="fas fa-save"></i>
     <i class="fas fa-sort"></i>
+    <i class="fas fa-check"></i>
 </body>
 </html>
