--- a/TeamWork_final/home.html
+++ b/TeamWork_final/home.html
@@ -42,7 +42,7 @@
                                 </form>
                             </nav>
 
-                            <nav class="navbar navbar-dark  navbar-expand-lg mt-4 menu-list">
+                            <nav class="navbar navbar-dark  navbar-expand-lg mt-4 menu-list justify-content-between">
                                 <button class="navbar-toggler" data-toggle='collapse' data-target='#main-nav'>
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
@@ -82,8 +82,13 @@
                                         <li class="nav-item">
                                             <a href="" class="nav-link text-light mr-3">Contact</a>
                                         </li>
+
                                     </ul>
 
+                                </div>
+                                <div class="icon text-light">
+                                    <i class="fas fa-user p-2"></i>
+                                    <i class="fas fa-cart-arrow-down p-2"></i>
                                 </div>
                             </nav>
                         </div>
@@ -98,7 +103,7 @@
         <!-- content -->
         <div id="wp-content">
             <h1 class="text-center">Hello world</h1>
-        
+
         </div>
         <!-- end content -->
 
